<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ficheContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fiche_contact"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableIdentite"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ficheContact">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/nom" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/prenom" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/telephone" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/editIdentity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifier_identite"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableIdentite" />

    <TableLayout
        android:id="@+id/tableAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIdentity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/numero" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/rue" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/code_postal" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_column="1"
                android:text="@string/ville" />

            <TextView
                android:gravity="end"
                android:hint="@string/inconnu"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/modifier_adresse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableAdresse" />


</androidx.constraintlayout.widget.ConstraintLayout>